# pyQMC

./: .gitignore  README.md  environment.yml  pyproject.toml
docs/: benchmark_references.md  developer_manual.md  user_manual.md
src/pyqmc/: __init__.py  __main__.py  cli.py
src/pyqmc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/pyqmc/api/: API_DEVELOPER_GUIDE_ZH.md  __init__.py  __main__.py  api.py  api_server.py  models.py  service.py
src/pyqmc/application/: __init__.py  catalog.py  vmc.py
src/pyqmc/benchmarks/: __init__.py  references.py  vmc_harmonic_oscillator.py
src/pyqmc/core/: __init__.py  config.py  results.py  stats.py  vmc_input.py
src/pyqmc/dmc/: __init__.py
src/pyqmc/gui/: GUI_DEVELOPER_NOTE_ZH.md  __init__.py  __main__.py  app.py
src/pyqmc/gui/assets/: app.js  index.html  styles.css
src/pyqmc/vmc/: __init__.py  harmonic_oscillator.py  metropolis.py  solver.py
tests/: conftest.py
tests/integration/: test_api.py  test_cli.py
tests/unit/: test_application_catalog.py  test_application_vmc.py  test_benchmark_references.py  test_benchmark_vmc_harmonic_oscillator.py  test_core_config.py  test_core_results.py  test_core_stats.py  test_core_vmc_input.py  test_gui_local_compute_bridge.py  test_vmc_harmonic_oscillator.py  test_vmc_metropolis.py  test_vmc_solver.py
